add log in fix some custom css

--- a/src/pages/Shared/LoginAndSignup/Singup/Signup.css
+++ b/src/pages/Shared/LoginAndSignup/Singup/Signup.css
@@ -5,7 +5,7 @@
     box-shadow: 0px 0px rebeccapurple;
 } */
 
-input[type="text"],input[type="password"]{
+input[type="text"],input[type="password"],input[type="email"]{
     /* border: 2px solid rgb(235, 235, 231); */
     border-bottom: 2px solid rgb(235, 235, 231);
     border-radius: 5px;
