--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,7 @@
 .default {
     @apply no-underline;
 }
+
+.input-field {
+    @apply w-full border-b-2 border-[#84a98c] rounded-md px-2 py-1 box-border mb-2 focus:outline-none focus:border-[#344e41] focus:bg-[#f8f9fa]
+}
