--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
     color: #fff;
 }
 
+/* 
+000814
+1b1b1e
+*/
+
 .active {
     @apply text-[#84a98c] underline underline-offset-8;
 }
@@ -19,9 +24,22 @@
     @apply w-full border-b-2 border-[#84a98c] rounded-md px-2 py-1 box-border mb-2 focus:outline-none focus:border-[#344e41] focus:bg-[#f8f9fa]
 }
 
-/* 
-000814
-1b1b1e
-*/
+/* carousel */
+.carousel .thumbs-wrapper {
+    display: none;
+}
+
+/* .carousel .legend {
+    margin-bottom: 320px;
+} */
+
+.grayscale {
+    filter: grayscale(95%);
+    transition: filter 0.3s ease-in-out; 
+}
+
+.group:hover .grayscale {
+    filter: grayscale(0%);
+}
 
 
