--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,10 @@
     filter: grayscale(0%);
 }
 
+.quiz-category-effect {
+    @apply font-[Cinzel] hover:bg-[#344e41] hover:w-[calc(100%+20px)] duration-700 text-black hover:text-white hover:scale-105 p-2 hover:rounded-e-2xl
+}
+
 /* testimonial */
 /* .carousel-container .react-multiple-carousel__arrow .react-multiple-carousel__arrow--right {
     display: none !important;
