--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
 
 .grayscale {
     filter: grayscale(95%);
-    transition: filter 0.3s ease-in-out; 
+    transition: filter 0.3s ease-in-out;
 }
 
 .group:hover .grayscale {
@@ -42,28 +42,19 @@
     @apply font-[Cinzel] hover:bg-[#344e41] hover:w-[calc(100%+20px)] duration-700 text-black hover:text-white hover:scale-105 p-2 hover:rounded-e-2xl
 }
 
-/* testimonial */
-/* .carousel-container .react-multiple-carousel__arrow .react-multiple-carousel__arrow--right {
-    display: none !important;
-} */
 
-/* #google_translate_element select{
-    background-color:#f6edfd;
-    color:#383ffa;
-    border: none;
-    border-radius:3px;
-    padding:6px 8px
-} */
 
-/* .goog-te-banner-frame{
-    display:none !important;
-} */
-
-/* #google_translate_element {
+/* .translated-ltr{
+    margin-top: -40px;
+}
+.goog-te-banner-frame{
+    display: none;
+    margin-top: -20px;
+}
+.goog-logo-link{
     display: none !important;
 }
-  
-
-#google_translate_element .goog-te-gadget {
-    display: none !important;
+.goog-te-gadget{
+    color: transparent !important;
 } */
+
