--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-.dark {
+/* .dark {
   background-color: #011627;
   color: #fff;
+} */
+
+.dark {
+  @apply bg-gradient-to-l from-gray-700 via-gray-900 to-black text-white
+}
+
+.night {
+  @apply bg-gradient-to-l from-[#495057] via-[#000000] to-[#6c757d] text-white
+}
+
+.disabled-button:hover {
+  cursor: not-allowed; 
+}
+
+.disable-icon {
+  margin-right: 4px; 
 }
 
 /* 
@@ -13,7 +29,7 @@
 */
 
 .active {
-  @apply text-[#84a98c] underline underline-offset-8;
+  @apply text-[#48cae4] underline underline-offset-8;
 }
 
 .default {
@@ -21,7 +37,7 @@
 }
 
 .input-field {
-  @apply w-full border-b-2 border-[#84a98c] rounded-md px-2 py-1 box-border mb-2 focus:outline-none focus:border-[#344e41] focus:bg-[#f8f9fa];
+  @apply w-full border-b-2 border-[#3c6e71] rounded-md px-2 py-1 box-border mb-2 focus:outline-none focus:border-[#335c67] focus:bg-[#f8f9fa];
 }
 
 /* carousel */
@@ -39,11 +55,11 @@
 }
 
 .quiz-category-effect {
-  @apply font-[Cinzel] hover:bg-[#344e41] hover:w-[calc(100%+20px)] duration-700  hover:text-white hover:scale-105 p-2 hover:rounded-e-2xl;
+  @apply font-[Cinzel] hover:bg-[#335c67] hover:w-[calc(100%+20px)] duration-700  hover:text-white hover:scale-105 p-2 hover:rounded-e-2xl;
 }
 
 .quiz-category-effects {
-  @apply font-[Cinzel] hover:bg-[#344e41] hover:w-[calc(100%+20px)] duration-700 hover:text-white hover:scale-105 p-2 hover:rounded-e-2xl;
+  @apply font-[Cinzel] hover:bg-[#335c67] hover:w-[calc(100%+20px)] duration-700 hover:text-white hover:scale-105 p-2 hover:rounded-e-2xl;
 }
 
 .testimonial {
@@ -62,9 +78,9 @@
   width: 100%;
   margin-bottom: 8px;
   border-bottom-width: 4px;
-  border-bottom-color: #84a98c;
+  border-bottom-color: #3c6e71;
   border-bottom-style: solid;
-  color: #84a98c;
+  color: #3c6e71;
   border-radius: 0.25rem;
   padding: 8px 16px;
   border-radius: 8px;
@@ -75,6 +91,6 @@
 
 /* Hover styles */
 .secondary-button:hover {
-  background-color: #84a98c;
+  background-color: #3c6e71;
   color: white;
 }
