--- a/src/index.css
+++ b/src/index.css
@@ -38,21 +38,36 @@
 
 /* carousel */
 
+
 .carousel .thumbs-wrapper {
   display: none;
 }
+
 
 .grayscale {
   filter: grayscale(95%);
   transition: filter 0.3s ease-in-out;
 }
 
-/* carousel */
-
 
 .group:hover .grayscale {
   filter: grayscale(0%);
 }
+
+
+
+/* carousel */
+
+/* trending post */
+
+
+.trending-post {
+  clip-path: polygon(100% 0%, 0% 0% , 0.00% 72.50%, 2.00% 70.89%, 4.00% 69.25%, 6.00% 67.62%, 8.00% 66.02%, 10.00% 64.48%, 12.00% 63.04%, 14.00% 61.72%, 16.00% 60.55%, 18.00% 59.55%, 20.00% 58.74%, 22.00% 58.13%, 24.00% 57.73%, 26.00% 57.56%, 28.00% 57.62%, 30.00% 57.90%, 32.00% 58.40%, 34.00% 59.11%, 36.00% 60.01%, 38.00% 61.10%, 40.00% 62.35%, 42.00% 63.73%, 44.00% 65.22%, 46.00% 66.79%, 48.00% 68.41%, 50.00% 70.05%, 52.00% 71.67%, 54.00% 73.26%, 56.00% 74.77%, 58.00% 76.18%, 60.00% 77.46%, 62.00% 78.59%, 64.00% 79.54%, 66.00% 80.30%, 68.00% 80.85%, 70.00% 81.19%, 72.00% 81.29%, 74.00% 81.18%, 76.00% 80.84%, 78.00% 80.28%, 80.00% 79.51%, 82.00% 78.55%, 84.00% 77.42%, 86.00% 76.14%, 88.00% 74.72%, 90.00% 73.21%, 92.00% 71.62%, 94.00% 70.00%, 96.00% 68.36%, 98.00% 66.74%, 100.00% 65.17%);
+}
+
+
+/* trending post */
+
 
 
 .quiz-category-effect {
@@ -72,6 +87,18 @@
     border-radius:3px;
     padding: 0;
 } */
+
+
+/* testimonial */
+
+
+.testimonial-wave {
+  clip-path: polygon(100% 0%, 0% 0% , 0.00% 86.50%, 2.00% 86.25%, 4.00% 85.52%, 6.00% 84.32%, 8.00% 82.71%, 10.00% 80.73%, 12.00% 78.46%, 14.00% 75.98%, 16.00% 73.38%, 18.00% 70.75%, 20.00% 68.17%, 22.00% 65.76%, 24.00% 63.58%, 26.00% 61.71%, 28.00% 60.23%, 30.00% 59.19%, 32.00% 58.61%, 34.00% 58.53%, 36.00% 58.94%, 38.00% 59.83%, 40.00% 61.17%, 42.00% 62.92%, 44.00% 65.00%, 46.00% 67.35%, 48.00% 69.88%, 50.00% 72.50%, 52.00% 75.12%, 54.00% 77.65%, 56.00% 80.00%, 58.00% 82.08%, 60.00% 83.83%, 62.00% 85.17%, 64.00% 86.06%, 66.00% 86.47%, 68.00% 86.39%, 70.00% 85.81%, 72.00% 84.77%, 74.00% 83.29%, 76.00% 81.42%, 78.00% 79.24%, 80.00% 76.83%, 82.00% 74.25%, 84.00% 71.62%, 86.00% 69.02%, 88.00% 66.54%, 90.00% 64.27%, 92.00% 62.29%, 94.00% 60.68%, 96.00% 59.48%, 98.00% 58.75%, 100.00% 58.50%);
+}
+
+
+/* testimonial */
+
 
 
 /* user profile */
