--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@
   @apply w-full text-black border-b-2 border-[#84a98c] rounded-md px-2 py-1 box-border mb-2 focus:outline-none focus:border-[#344e41] focus:bg-[#f8f9fa];
 }
 
+.input-field {
+  @apply w-full text-black border-b-2 border-[#84a98c] rounded-md px-2 py-1 box-border mb-2 focus:outline-none focus:border-[#344e41] focus:bg-[#f8f9fa];
+}
+
 
 /* carousel */
 
