single blog data add

--- a/src/index.css
+++ b/src/index.css
@@ -168,11 +168,36 @@
 
 /* single message */
 
-#payment-form {
-  border: #f6f9fc solid 1px;
-  border-radius: var(--radius);
-  padding: 20px;
-  margin: 20px 0;
-  box-shadow: 0 30px 50px -20px rgb(50 50 93 / 25%),
-    0 30px 60px -30px rgb(0 0 0 / 30%);
+@keyframes zoom-in {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+/* Define the zoom-out animation */
+@keyframes zoom-out {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
+
+/* Apply zoom-in animation when the modal content appears */
+.animate-zoom-in {
+  animation: zoom-in 0.9s ease-out;
+}
+
+/* Apply zoom-out animation when the modal content disappears */
+.zoom-in-out-modal[data-enter] .animate-zoom-in,
+.zoom-in-out-modal[data-leave] .animate-zoom-out {
+  animation: zoom-out 0.9s ease-out;
 }
