--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 .night {
-  @apply bg-gradient-to-r from-[#415a77] via-[#415a77] to-[#1b263b] text-white
+  @apply bg-gradient-to-l from-[#22223b] via-[#4a4e69] to-[#1b263b] text-white
 }
 
 /* 
@@ -16,8 +16,13 @@
 */
 
 
-.active {
+.dark-active {
   @apply text-[#48cae4] underline underline-offset-8;
+}
+
+
+.night-active {
+  @apply text-[#b79ced] underline underline-offset-8;
 }
 
 
@@ -59,8 +64,8 @@
 }
 
 
-
 /* carousel */
+
 
 /* trending post */
 
@@ -147,17 +152,17 @@
 
 
 .night-left {
-  @apply bg-gradient-to-l from-[#1b263b] via-[#415a77] to-[#415a77] text-white
+  @apply bg-gradient-to-l from-[#1b263b] via-[#415a77] to-[#22223b] text-white
 }
 
 
 .night-middle {
-  @apply bg-gradient-to-bl from-[#415a77] via-[#415a77] to-[#1b263b] text-white
+  @apply bg-gradient-to-bl from-[#415a77] via-[#415a77] to-[#22223b] text-white
 }
 
 
 .night-right {
-  @apply bg-gradient-to-r from-[#1b263b] via-[#415a77] to-[#415a77] text-white
+  @apply bg-gradient-to-r from-[#1b263b] via-[#415a77] to-[#22223b] text-white
 }
 
 
@@ -166,8 +171,13 @@
 }
 
 
-.message-btn-dark-night {
+.message-btn-dark {
   @apply text-black bg-[#48cae4] hover:bg-[#48cae4e6]
+}
+
+
+.message-btn-night {
+  @apply text-black bg-[#0d1b2a] hover:bg-[#48cae4e6]
 }
 
 /* single message */
