--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,7 @@
 
 
 .outline-btn-light {
-  @apply border border-[#3c6e71] text-[#3c6e71] rounded-lg px-4 py-2 hover:bg-[#3c6e71] hover:text-black transition duration-300 ease-in-out
+  @apply border border-[#3c6e71] text-[#3c6e71] hover:text-white rounded-lg px-4 py-2 hover:bg-[#3c6e71] transition duration-300 ease-in-out
 }
 
 
